# openai-api-wrapper

./: Cargo.toml  README.md
src/: main.rs  openai_api.rs
