[package]
name = "chatgpt-stream-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
urlencoding = "2.1.2"
futures = "0.3.28"
